--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sweetaste</title>
+    <title>Sweetaste</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -19,10 +19,10 @@
                     <li><a href="#">甜點</a></li>
                     <li><a href="#">登入</a></li>
                 </ul>
-                <a href="#"><img src="/img/shopping_cart.png"></a>
+                <a href="#"><img src="img/shopping_cart.png"></a>
             </div>
         </div>
-        <div class="banner"><img src="/img/banner.png" alt="banner"></div>
+        <div class="banner"><img src="img/banner.png" alt="banner"></div>
         <div class="container">
             <div class="aside">
                 <h2>甜點類別</h2>
@@ -35,73 +35,73 @@
             </div>
             <ul class="content">
                 <li>
-                    <div class="photo"><img src="/img/p-1.png" alt=""></div>
+                    <div class="photo"><img src="img/p-1.png" alt=""></div>
                     <div class="item">
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
                     <div class="buy"><a href="#">加入購物車</a></div>
                     <div class="mark">本日精選</div>
-                    <div class="like"><img src="/img/favorite_border.png"></div>
+                    <div class="like"><img src="img/favorite_border.png"></div>
                 </li>
                 <li>
-                    <div class="photo"><img src="/img/p-2.png" alt=""></div>
+                    <div class="photo"><img src="img/p-2.png" alt=""></div>
                     <div class="item">
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
                     <div class="buy"><a href="#">加入購物車</a></div>
                     <div class="mark">本日精選</div>
-                    <div class="like"><img src="/img/favorite_border.png"></div>
+                    <div class="like"><img src="img/favorite_border.png"></div>
                 </li>
                 <li>
-                    <div class="photo"><img src="/img/p-3.png" alt=""></div>
+                    <div class="photo"><img src="img/p-3.png" alt=""></div>
                     <div class="item">
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
                     <div class="buy"><a href="#">加入購物車</a></div>
                     <div class="mark">本日精選</div>
-                    <div class="like"><img src="/img/favorite_border.png"></div>
+                    <div class="like"><img src="img/favorite_border.png"></div>
                 </li>
                 <li>
-                    <div class="photo"><img src="/img/p-4.png" alt=""></div>
+                    <div class="photo"><img src="img/p-4.png" alt=""></div>
                     <div class="item">
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
                     <div class="buy"><a href="#">加入購物車</a></div>
                     <div class="mark">本日精選</div>
-                    <div class="like"><img src="/img/favorite_border.png" alt=""></div>
+                    <div class="like"><img src="img/favorite_border.png" alt=""></div>
                 </li>
                 <li>
-                    <div class="photo"><img src="/img/p-5.png" alt=""></div>
+                    <div class="photo"><img src="img/p-5.png" alt=""></div>
                     <div class="item">
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
                     <div class="buy"><a href="#">加入購物車</a></div>
                     <div class="mark">本日精選</div>
-                    <div class="like"><img src="/img/favorite_border.png"></div>
+                    <div class="like"><img src="img/favorite_border.png"></div>
                 </li>
                 <li>
-                    <div class="photo"><img src="/img/p-6.png" alt=""></div>
+                    <div class="photo"><img src="img/p-6.png" alt=""></div>
                     <div class="item">
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
                     <div class="buy"><a href="#">加入購物車</a></div>
                     <div class="mark">本日精選</div>
-                    <div class="like"><img src="/img/favorite_border.png"></div>
+                    <div class="like"><img src="img/favorite_border.png"></div>
                 </li>
             </ul>
         </div>
         <ul class="more">
-            <li><a href="#"><img src="/img/arrow_left.png"></a></li>
+            <li><a href="#"><img src="img/arrow_left.png"></a></li>
             <li class="links"><a href="#">1</a></li>
             <li class="links"><a href="#">2</a></li>
             <li class="links"><a href="#">3</a></li>
-            <li><a href="#"><img src="/img/arrow_right.png"></a></li>
+            <li><a href="#"><img src="img/arrow_right.png"></a></li>
         </ul>
     </div>
 </body>
