--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
-                    <div class="buy"><a href="#">加入購物車</a></div>
-                    <div class="mark">本日精選</div>
+                    <a href="#" class="buy">加入購物車</a>
+                    <p class="mark">本日精選</p>
                     <div class="like"><img src="img/favorite_border.png"></div>
                 </li>
                 <li>
@@ -50,8 +50,8 @@
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
-                    <div class="buy"><a href="#">加入購物車</a></div>
-                    <div class="mark">本日精選</div>
+                    <a href="#" class="buy">加入購物車</a>
+                    <p class="mark">本日精選</p>
                     <div class="like"><img src="img/favorite_border.png"></div>
                 </li>
                 <li>
@@ -60,8 +60,8 @@
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
-                    <div class="buy"><a href="#">加入購物車</a></div>
-                    <div class="mark">本日精選</div>
+                    <a href="#" class="buy">加入購物車</a>
+                    <p class="mark">本日精選</p>
                     <div class="like"><img src="img/favorite_border.png"></div>
                 </li>
                 <li>
@@ -70,8 +70,8 @@
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
-                    <div class="buy"><a href="#">加入購物車</a></div>
-                    <div class="mark">本日精選</div>
+                    <a href="#" class="buy">加入購物車</a>
+                    <p class="mark">本日精選</p>
                     <div class="like"><img src="img/favorite_border.png" alt=""></div>
                 </li>
                 <li>
@@ -80,8 +80,8 @@
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
-                    <div class="buy"><a href="#">加入購物車</a></div>
-                    <div class="mark">本日精選</div>
+                    <a href="#" class="buy">加入購物車</a>
+                    <p class="mark">本日精選</p>
                     <div class="like"><img src="img/favorite_border.png"></div>
                 </li>
                 <li>
@@ -90,8 +90,8 @@
                         <h2>焦糖馬卡龍</h2>
                         <span>NT$ 450</span>
                     </div>
-                    <div class="buy"><a href="#">加入購物車</a></div>
-                    <div class="mark">本日精選</div>
+                    <a href="#" class="buy">加入購物車</a>
+                    <p class="mark">本日精選</p>
                     <div class="like"><img src="img/favorite_border.png"></div>
                 </li>
             </ul>
